--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,17 @@
-/* @import url("https://fonts.google.com/share?selection.family=Roboto:wght@400;500;700");
-
-html,
 body {
-  font-family: 'Roboto', sans-serif;
-} */
+  /* Para poder fijar el pie de página con posición absoluta */
+  position: relative;
+  /* Medida mínima */
+  min-height: 100vh;
+}
+
+footer {
+  /* Posicionar abajo */
+  position: absolute;
+  bottom: 0;
+  /* Ocupar todo el ancho disponible */
+  width: 100%;
+  min-height: 18vh;
+  /* Solo para probar cómo se ve */
+  background: #ccc;
+}
